--- a/bluelinky.html
+++ b/bluelinky.html
@@ -162,6 +162,7 @@
             region: { value: "EU", required: true },
             pin: { required: true, validate: RED.validators.number() },
             vin: { required: true }
+            brand: { value: "H", required: true }
         },
         label: function () {
             return this.vin;
@@ -365,5 +366,12 @@
     <div class="form-row">
         <label for="node-config-input-vin"><i class="icon-bookmark"></i> Vin</label>
         <input type="text" id="node-config-input-vin">
+    </div>
+    <div class="form-row">
+        <label for="node-config-input-brand"><i class="icon-bookmark"></i> Brand</label>
+        <select id="node-config-input-brand">
+            <option value="K">Kia</option>
+            <option value="H">Hyundai</option>
+        </select>
     </div>
 </script>
