--- a/bluelinky.html
+++ b/bluelinky.html
@@ -370,8 +370,8 @@
     <div class="form-row">
         <label for="node-config-input-brand"><i class="icon-bookmark"></i> Brand</label>
         <select id="node-config-input-brand">
-            <option value="K">Kia</option>
-            <option value="H">Hyundai</option>
+            <option value="kia">Kia</option>
+            <option value="hyundai">Hyundai</option>
         </select>
     </div>
 </script>
