--- a/bluelinky.html
+++ b/bluelinky.html
@@ -162,7 +162,7 @@
             region: { value: "EU", required: true },
             pin: { required: true, validate: RED.validators.number() },
             vin: { required: true }
-            brand: { value: "H", required: true }
+            brand: { value: "hyundai", required: true }
         },
         label: function () {
             return this.vin;
