--- a/bluelinky.html
+++ b/bluelinky.html
@@ -292,6 +292,10 @@
     </div>
 </script>
 
+<script type="text/html" data-help-name="start-charge">
+    <p>Starts charging the configured vehicle</p>
+</script>
+
 <script type="text/html" data-template-name="stop-charge">
     <div class="form-row">
         <label for="node-input-name"><i class="icon-tag"></i> Name</label>
@@ -301,6 +305,10 @@
         <label for="node-input-bluelinky"><i class="icon-tag"></i> Config</label>
         <input type="text" id="node-input-bluelinky" placeholder="Name">
     </div>
+</script>
+
+<script type="text/html" data-help-name="stop-charge">
+    <p>Stops charging the configured vehicle</p>
 </script>
 
 <script type="text/html" data-template-name="unlock-car">
@@ -316,10 +324,6 @@
 
 <script type="text/html" data-help-name="unlock-car">
     <p>Unlock the configured vehicle</p>
-</script>
-
-<script type="text/html" data-help-name="get-vehicle-status">
-    <p>Get the status of the configured vehicle</p>
 </script>
 
 <script type="text/html" data-template-name="lock-car">
