--- a/bluelinky.html
+++ b/bluelinky.html
@@ -179,8 +179,8 @@
             password: { required: true },
             region: { value: "EU", required: true },
             pin: { required: true, validate: RED.validators.number() },
-            vin: { required: true }
-            brand: { value: "hyundai", required: true }
+            vin: { required: true },
+            brand: { value: "hyundai", required: true },
         },
         label: function () {
             return this.vin;
