refer to bluelinky 7.0.1, bugfix in brand

--- a/bluelinky.html
+++ b/bluelinky.html
@@ -179,7 +179,7 @@
             password: { required: true },
             region: { value: "EU", required: true },
             pin: { required: true, validate: RED.validators.number() },
-            vin: { required: true }
+            vin: { required: true },
             brand: { value: "hyundai", required: true }
         },
         label: function () {
