Confusing name of Windscreenheating
clarified in Helptext what it does do.

--- a/bluelinky.html
+++ b/bluelinky.html
@@ -418,7 +418,7 @@
   <br />
   <p>For EVs:</p>
   <p>Starts your climate, required config as msg.payload:</p>
-  <p></p>
+  <p>Defrost defrosts the frontwindow, windscreenheating heats the backwindow, mirrors and steering wheel.</p>
   <pre>
         {
             defrost: boolean;
