Added all languages which are supported as well in the Bluelink App

--- a/bluelinky.html
+++ b/bluelinky.html
@@ -627,10 +627,22 @@
     </select>
   </div>
   <div class="form-row">
-    <label for="node-config-input-language"><i class="icon-bookmark"></i> Language</label>
+    <label for="node-config-input-language"><i class="icon-bookmark"></i> Language[Only for EU]</label>
     <select id="node-config-input-language">
       <option value="de">German</option>
       <option value="en">English</option>
+      <option value="it">Italian</option>
+      <option value="es">Spanish</option>
+      <option value="sv">Swedish</option>
+      <option value="nl">Dutch</option>
+      <option value="no">Norwegian</option>
+      <option value="cs">Czech</option>
+      <option value="sk">Slovak</option>
+      <option value="hu">Hungarian</option>
+      <option value="da">Danish</option>
+      <option value="pl">Polish</option>
+      <option value="fi">Finnish</option>
+      <option value="pt">Portuguese</option>
     </select>
   </div>
 </script>
